--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">남원 E-케어</string>
     <string name="login_with_phone">휴대폰 번호 로그인하기</string>
     <string name="login_with_face">안면인식 로그인하기</string>
+    <string name="register_with_face">안면인식 등록하기</string>
     <string name="empty_face_result">얼굴 촬영이 필요합니다.</string>
     <string name="unregistered_user">등록되지 않은 사용자입니다.</string>
     <string name="face_too_close">조금 멀리 얼굴을 보여주세요.</string>
@@ -14,6 +15,7 @@
     <string name="start">시작하기</string>
     <string name="complete">완료</string>
     <string name="cancel">취소</string>
+    <string name="register">등록</string>
     <string name="next">다음</string>
 
     <string name="intro_sub_title">UFace Bank Mobile</string>
